# report-pipeline

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adapters/claude-code/: SKILL.report-pipeline.md
adapters/codex/: AGENTS.md
adapters/generic/: ORCHESTRATOR.md
adapters/hwp/: README.md
adapters/pantadex/: README.md
archive/: README.md
archive/legacy-contracts/: CONTRACT_v0.4.md  CONTRACT_v0.5.md
docs/: README.md  architecture.md  archive-policy.md  capability-matrix.md  design-decisions.md  golden-path.md  humanization.md  lessons-learned.md  migration.md  pipeline-master-v0.6.md  skills-install.md  style-rules.md  troubleshooting.md
docs/plans/: v0.11-Z2-blindspots.md  v0.11-Z5.md  v0.8-portability.md  v015-renderer-certification.md
examples/style/: layout-conventions.md
examples/workspace/: README.md  request.example.yaml
pipeline/adapters_impl/: __init__.py  bundle_backend.py  docx_backend.py
pipeline/references/: CONTRACT_v0.6.md  agents.yaml  aliases.yaml  bundle_spec.md  humanization_contract.md  modules.yaml  personalization_contract.md  stages-edit.yaml  stages.yaml  (+2 more)
scripts/: bootstrap.py  new_report.py  setup_profile.py  sync_local.py
studio/: README.md  index.html  main.py  requirements.txt
tests/: test_bootstrap.py  test_check_saeteuk.py  test_new_report.py  test_setup_profile.py  test_studio.py
(+83 files in other folders)
